--- a/second.css
+++ b/second.css
@@ -177,3 +177,57 @@ body {
     margin-bottom: 2%;
     border-radius: 20px;
 }
+
+@media(max-width:75em){
+   html{
+    font-size: 50%;
+   }
+
+   .grid{
+    grid-column: 4.8rem;
+    row-gap: 6.4rem;
+   }
+
+   .heading-primary{
+    font-size: 3.6rem;
+   }
+
+   .heading-tertiary{
+    font-size: 2.4rem;
+   }
+
+   .header{
+    padding: 0 4.8rem;
+   }
+   .hero{
+    gap: 2.8rem;
+   }
+}
+
+@media(max-width:59em){
+    html{
+        font-size: 50%;
+    }
+    .hero{
+        grid-template-columns: 1fr;
+    }
+    .hero-text-box{
+        text-align: center;
+    }
+    .hero-img{
+        width: 60%;
+
+    }
+    .meal-content{
+        padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+    }
+    .cta{
+        grid-template-columns: 3fr 2fr;
+    }
+    .form-cta{
+        grid-template-columns: 1fr;
+    }
+    .btn--from{
+        margin-top: 1.2rem;
+    }
+}
