--- a/style.css
+++ b/style.css
@@ -1,445 +1,555 @@
-    *{
-        margin: 0;
-        padding: 0px;
-    }
-    
-    html {
-        font-size: 62.5%;
-        background-color: rgb(202, 107, 48);
-        /* scroll-behavior: smooth; */
-    }
+* {
+    margin: 0;
+    padding: 0;
+}
 
-    body {
-        font-family: "prompt", sans-serif;
-        line-height: 1;
-        font-weight: 400;
-        color: #555;
-    }
+html {
+    font-size: 62.5%;
+    background-color: rgb(202, 107, 48);
+    position: relative;
+    /* scroll-behavior: smooth; */
+}
 
-    .logo {
-        height: 6.5rem;
-        border-radius: 15px;
-    }
+body {
+    font-family: "prompt", sans-serif;
+    line-height: 1;
+    font-weight: 400;
+    color: #555;
+}
 
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 9.6rem;
-        padding: 0 4.8rem;
-    }
+.logo {
+    height: 6.5rem;
+    border-radius: 15px;
+}
 
-    .main-nav {
-        list-style: none;
-        display: flex;
-        gap: 3.2rem;
-    }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
 
-    .main-nav-link:link,
-    .main-nav-link:visited {
-        font-weight: 500;
-        font-size: 1.8rem;
-        transition: all 0.3s;
-        text-decoration: none;
-    }
+.main-nav {
+    list-style: none;
+    display: flex;
+    gap: 3.2rem;
+}
 
-    .main-nav-link:hover,
-    .main-nav-link:active {
-        color: rgb(131, 131, 131);
-    }
+.main-nav-link:link,
+.main-nav-link:visited {
+    font-weight: 500;
+    font-size: 1.8rem;
+    transition: all 0.3s;
+    text-decoration: none;
+}
 
-    .main-nav-link.nav-cta:link,
-    .main-nav-link.nav-cta:visited{
-        padding: 1.2rem 3.2rem;
-        border-radius: 9px;
-        color: #fff;
-        background-color: #0d43d6;
-    }
+.main-nav-link:hover,
+.main-nav-link:active {
+    color: rgb(131, 131, 131);
+}
 
-    .main-nav-link.nav-cta:hover,
-    .main-nav-link.nav-cta:active {
-        background-color: #002984;
-        box-shadow: #555;
-    }
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+    padding: 1.2rem 3.2rem;
+    border-radius: 9px;
+    color: #fff;
+    background-color: #0d43d6;
+}
 
-    .main-nav-link {
-        color: #000;
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+    background-color: #002984;
+    box-shadow: #555;
+}
+
+.main-nav-link {
+    color: #000;
+}
+
+.hero {
+    max-width: 130rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: rgb(202, 107, 48);
+}
+
+.hero-img {
+    width: 500px;
+    align-items: center;
+    display: flex;
+}
+
+.heading-primary {
+    font-size: 5.2rem;
+    font-weight: 700;
+    color: #000000;
+    line-height: 1.5;
+}
+
+.hero-description {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.6;
+    margin-bottom: 4.8rem;
+    color: #ffffff;
+}
+
+.word {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.6;
+    margin-bottom: 4.8rem;
+    color: #ffffff;
+}
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    color: #fff;
+    font-size: 2rem;
+    padding: 1.6rem 3.2rem;
+    text-decoration: none;
+    border-radius: 15px;
+    transition: all 0.5s;
+    margin: 10px;
+}
+
+.btn--full:link,
+.btn--full:visited {
+    color: #fff;
+    background-color: #2872fc;
+}
+
+.btn--full:hover,
+.btn--full:active {
+    color: #fff;
+    background-color: #0d43d6;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+    color: #181818;
+    background-color: #fff;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+    background-color: rgb(202, 107, 48);
+    box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right {
+    margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    margin-top: 8rem;
+}
+
+.deliver-img {
+    display: flex;
+}
+
+.deliver-img img {
+    height: 4.8rem;
+    width: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+    border: 3px solid #fdf3f3
+}
+
+.deliver-img img:last-child {
+    margin: 0;
+}
+
+.deliver-text {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.deliver-text span {
+    color: #ffffff;
+    font-weight: 700;
+}
+
+.container {
+    max-width: 130rem;
+    margin: 0 auto;
+    padding: 3.2rem 0;
+}
+
+.section-how {
+    padding: 9.6rem 0;
+    background-color: #fdf3f3;
+    margin-top: 5rem;
+}
+
+.subheading {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: darkgreen;
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+}
+
+.heading-secondary {
+    font-size: 4.4rem;
+    line-height: 1.2;
+    margin-bottom: 9.6rem;
+}
+
+.grid {
+    display: grid;
+    gap: 9.6rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--2--cols {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3--cols {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.step-description {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.step-img {
+    width: 90%;
+    border-radius: 10px;
+}
+
+.step-img1 {
+    width: 95%;
+    border-radius: 10px;
+}
+
+.step-number {
+    font-size: 9.8rem;
+    font-weight: 800;
+    color: #ffa1768a;
+}
+
+.step-img-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Meals section */
+
+.section-meals {
+    padding: 9.6rem 0;
+    background-color: #f5f5f5;
+    margin-top: 5rem;
+}
+
+.meal {
+    box-shadow: 0 2.4rem 4.8rem 0 rgba(0, 0, 0, 0.1);
+    border: 12px;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: all 0.4s;
+}
+
+.meal:hover {
+    transform: translateY(-1.2rem);
+}
+
+.meal-content {
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-img {
+    width: 100%;
+}
+
+.meal-tag {
+    margin-bottom: 1.2rem;
+}
+
+.meal-title {
+    font-size: 2rem;
+    color: #000000;
+    font-weight: 600;
+    margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+}
+
+.meal-attribute {
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.tag {
+    display: inline-block;
+    padding: 0.4rem 0.8rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    background-color: #0d43d6;
+    color: #000;
+    border-radius: 100px;
+}
+
+
+/*--footer-section--*/
+
+.footer {
+    padding: 4rem 0;
+}
+
+.footer-logo {
+    display: block;
+    margin-bottom: 3.2rem;
+}
+
+.social-icon {
+    height: 2.4rem;
+    width: 2.4;
+}
+
+.footer-headings {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.footer-heading {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: 3.2rem;
+}
+
+.footer.nav {
+    list-style: none;
+}
+
+.footer-link:link,
+.footer-link:visited {
+    color: #000000be;
+    text-decoration: none;
+    font-size: 1.2rem;
+
+}
+
+.footer-link:hover,
+.footer-link:active {
+    color: #000000be;
+}
+
+.social-link {
+    display: flex;
+    gap: 2.4rem;
+    list-style: none;
+}
+
+.copyright {
+    font-size: 1.2rem;
+    color: #524e4e;
+}
+
+.contact {
+    font-size: normal;
+    font-size: 1.6rem;
+    line-height: 1.6;
+}
+
+.address {
+    margin-bottom: 2.4rem;
+}
+
+.grid--footer {
+    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+/*--End Footer--*/
+
+.section-cta {
+    padding: 9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #ffffff;
+    box-shadow: 0 2.4rem 4.8rem 0 rgba(0, 0, 0, 0.15);
+    border-radius: 11px;
+    background-image: linear-gradient(to right bottom, #e2e2e2, #c5c9d1);
+    height: 50rem;
+    overflow: hidden;
+}
+
+.cta-text-box {
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #000000;
+}
+
+.cta .heading-secondary {
+    color: #000000;
+}
+
+.cta-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.cta-image {
+    background-image: linear-gradient(to right bottom,
+            #03329762,
+            #6b8dd660),
+        url(img/7.jpg);
+    background-size: cover;
+    background-position: left;
+}
+
+/*-----------------------------------*/
+
+.sticky .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* width: 100%; */
+    right: 0;
+    height: 5.5rem;
+    background-image: linear-gradient(to right, rgb(202, 107, 48), #4e5cf9);
+    padding: 2rem 20px;
+    z-index: 999;
+    box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.3);
+}
+
+.sticky .section-hero {
+    padding: 4.8rem 20px 9.6rem 20px;
+}
+
+/*-----------------------------------*/
+
+@media(max-width:84em) {
+    .section-hero {
+        background-color: #0037af;
     }
 
     .hero {
-        max-width: 130rem;
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        background-color: rgb(202, 107, 48);
-    }
-
-    .hero-img {
-        width: 500px;
-        align-items: center;
-        display: flex;
+        max-width: 120rem;
     }
 
     .heading-primary {
-        font-size: 5.2rem;
-        font-weight: 700;
-        color: #000000;
-        line-height: 1.5;
-    }
-
-    .hero-description {
-        font-size: 2rem;
-        font-weight: 500;
-        line-height: 1.6;
-        margin-bottom: 4.8rem;
-    }
-
-    .word {
-        font-size: 2rem;
-        font-weight: 500;
-        line-height: 1.6;
-        margin-bottom: 4.8rem;
-    }
-
-    .btn:link,
-    .btn:visited {
-        display: inline-block;
-        color: #fff;
-        font-size: 2rem;
-        padding: 1.6rem 3.2rem;
-        text-decoration: none;
-        border-radius: 15px;
-        transition: all 0.5s;
-        margin: 10px;
-    }
-
-    .btn--full:link,
-    .btn--full:visited {
-        color: #fff;
-        background-color: #2872fc;
-    }
-
-    .btn--full:hover,
-    .btn--full:active {
-        color: #fff;
-        background-color: #0d43d6;
-    }
-
-    .btn--outline:link,
-    .btn--outline:visited {
-        color: #181818;
-        background-color: #fff;
-    }
-
-    .btn--outline:hover,
-    .btn--outline:active {
-        background-color: rgb(202, 107, 48);
-        box-shadow: inset 0 0 0 3px #fff;
-    }
-
-    .margin-right {
-        margin-right: 1.6rem !important;
-    }
-
-    .delivered-meals {
-        display: flex;
-        align-items: center;
-        gap: 1.6rem;
-        margin-top: 8rem;
-    }
-
-    .deliver-img {
-        display: flex;
-    }
-
-    .deliver-img img {
-        height: 4.8rem;
-        width: 4.8rem;
-        border-radius: 50%;
-        margin-right: -1.6rem;
-        border: 3px solid #fdf3f3
-    }
-
-    .deliver-img img:last-child {
-        margin: 0;
-    }
-
-    .deliver-text {
-        font-size: 1.8rem;
-        font-weight: 600;
-    }
-
-    .deliver-text span {
-        color: #ffffff;
-        font-weight: 700;
-    }
-
-    .container {
-        max-width: 130rem;
-        margin: 0 auto;
-        padding: 3.2rem 0;
-    }
-
-    .section-how {
-        padding: 9.6rem 0;
-        background-color: #fdf3f3;
-        margin-top: 5rem;
-    }
-
-    .subheading {
-        display: block;
-        font-size: 1.6rem;
-        font-weight: 500;
-        color: darkgreen;
-        text-transform: uppercase;
-        margin-bottom: 1.6rem;
-    }
-
-    .heading-secondary {
         font-size: 4.4rem;
-        line-height: 1.2;
-        margin-bottom: 9.6rem;
+    }
+}
+
+@media(max-width:75rem) {
+    html {
+        font-size: 56.25%;
     }
 
     .grid {
-        display: grid;
-        gap: 9.6rem;
-        grid-template-columns: repeat(2,1fr);
+        grid-column: 4.8rem;
+        row-gap: 6.4rem;
     }
 
-    .grid--2--cols {
-        grid-template-columns: repeat(2,1fr);
+    .heading-primary {
+        font-size: 3.6rem;
     }
 
-    .grid--3--cols {
-        grid-template-columns: repeat(3,1fr);
+    .heading-tertiary {
+        font-size: 2.4rem;
     }
 
-    .step-description {
-        font-size: 1.8rem;
-        line-height: 1.8;
+    .header {
+        padding: 0 4.8rem;
     }
 
-    .step-img {
-        width: 90%;
-        border-radius: 10px;
+    .hero {
+        gap: 2.8rem;
+    }
+}
+
+
+.btn-mobile-nav {
+    display: none;
+}
+
+
+@media (max-width: 59em) {
+    html {
+        font-size: 50%;
     }
 
-    .step-img1 {
-        width: 95%;
-        border-radius: 10px;
-    }
-
-    .step-number {
-        font-size: 9.8rem;
-        font-weight: 800;
-        color: #ffa1768a;
-    }
-
-    .step-img-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    /* Meals section */
-
-    .section-meals {
-        padding: 9.6rem 0;
-        background-color: #f5f5f5;
-        margin-top: 5rem;
-    }
-
-    .meal {
-        box-shadow: 0 2.4rem 4.8rem 0 rgba(0, 0, 0, 0.1);
-        border: 12px;
-        border-radius: 20px;
-        overflow: hidden;
-        transition: all 0.4s;
-    }
-
-    .meal:hover {
-        transform: translateY(-1.2rem);
-    }
-
-    .meal-content {
-        padding: 3.2rem 4.8rem 4.8rem 4.8rem;
-    }
-
-    .meal-img {
-        width: 100%;
-    }
-
-    .meal-tag {
-        margin-bottom: 1.2rem;
-    }
-
-    .meal-title {
-        font-size: 2rem;
-        color:#000000;
-        font-weight: 600;
-        margin-bottom: 3.2rem;
-    }
-
-    .meal-attributes {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        gap: 2.5rem;
-    }
-
-    .meal-attribute {
-        font-size: 1.5rem;
-        display: flex;
-        align-items: center;
-        gap: 1.6rem;
-    }
-
-    .tag {
-        display: inline-block;
-        padding: 0.4rem 0.8rem;
-        font-size: 1.5rem;
-        text-transform: uppercase;
-        background-color: #0d43d6;
-        color: #000;
-        border-radius: 100px;
-    }
-
-    .footer {
-        padding: 9.6rem 0;  
-    }
-
-    .footer-logo{
+    .btn-mobile-nav {
         display: block;
-        margin-bottom: 3.2rem;
+        border: none;
+        background: none;
+        cursor: pointer;
     }
 
-    .social-icon{
-        height: 2.4rem;
-        width: 2.4rem;
+    .icon-mobile-nav {
+        height: 4.8rem;
+        width: 4.8rem;
+        color: #333;
     }
 
-    .footer-heading{
-        font-size: 1.8rem;
-        font-weight: 500;
-        color: #000;
-        margin-bottom: 3.2rem;
+    .icon-mobile-nav[name="close-outline"] {
+        display: none;
     }
 
-    .footer-nav{
-        list-style: none;
-       
+    .icon-mobile-nav[name="menu-outline"] {
+        display: block;
     }
 
-    .footer-link:link,.footer-link:visited{
-        text-decoration: none;
-        font-size: 1.6rem;
-        color: #0a061a;
+    .nav-open .icon-mobile-nav[name="menu-outline"] {
+        display: none;
     }
 
-    .footer-link:hover,.footer-link:active {
-        color: #ffffff;
+    .nav-open .icon-mobile-nav[name="close-outline"] {
+        display: block;
     }
 
-    .social-link{
-        display: flex;
-        gap: 2.4rem;
-        list-style: none;
-    }
-
-    .copyright{
-        font-size: 1.4rem;
-        color: #000;
-    }
-
-    .contact{
-        font-size: normal;
-        font-size: 1.6rem;
-        line-height: 1.6;
-    }
-
-    .address {
-        margin-bottom: 2.4rem;
-    }
-
-    .grid--footer{
-        grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr ;
-    }
-
-    .section-cta{
-        padding: 9.6rem 0;  
-    }
-    .cta{
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        background-color: #4a56f3;
-        box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
-        border-radius: 11px;
-        background-image: linear-gradient(to right bottom,#0037af, #6687cf);
-        height: 50rem;
-        overflow: hidden;
-    }
-
-    .cta-text-box{
-        padding: 4.8rem 6.4rem 6.4rem;
-        color: #eee;
-    }
-
-    .cta .heading-secondary{
-        color: #eee;
-    }
-
-    .cta-text{
-        font-size: 1.8rem;
-        line-height: 1.2;
-     
-    }
-
-    .cta-image{
-        background-image: linear-gradient(to right bottom,
-        #03329762,
-        #6b8dd660),
-        url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSfr9A_A3YFJXeLs_I-2J0eXhKQZRIYsB-WQ&s    );
-        background-size: cover;
-        background-position: left;
-    }
-
-    .sticky .header{
-        position: fixed;
+    .main-nav {
+        background-color: white;
+        position: absolute;
         top: 0;
-        
         left: 0;
-    
         width: 100%;
-        height: 8rem;
-        background-image: linear-gradient(to right, rgb(202, 107, 48), #4e5cf9);
-        padding: 2rem 0px;
-        
-        z-index: 999;
-        box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.3);
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        transform: translateX(100%);
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        visibility: hidden;
+        transition: all 0.5s ease-out;
     }
 
-    .heading-description{
-        font-size: 1rem;
-        font-weight: 200;
-        margin-bottom: 4.8rem;
-        color: #ffffff;
+    .main-nav {
+        flex-direction: column;
+        gap: 4.8rem;
     }
-
-    .sticky .section-hero{
-        padding: 4.8rem 0 9.6rem 0;
-        
+.main-nav-link:link,
+.main-nav-link:visited {
+    color: #000000;
+    font-size: 3rem;
+}
+    .nav-open .main-nav {
+        opacity: 1;
+        pointer-events: auto;
+        visibility: visible;
+        transform: translateX(0%);
     }
-
-    
-
-
-
-
-
-
-
-
-
-
-
+}
